--- a/layout1.html
+++ b/layout1.html
@@ -8,24 +8,27 @@
   <link rel="stylesheet" type="text/css" href="styles/layout1.css">
 </head>
 <body>
-  <header>
-    <div class="logo"> Company Logo </div>
-    <div class="itemListContainer"> 
-      <p> Item 1 </p>
-      <p> Item 2 </p>
-      <p> Item 3 </p>
-      <p> Item 4 </p>
-    </div>
-  </header>
-  <section>
-    <div> Featured Product Image</div>
-  </section>
-  <main>
-    <div> Product 1 </div>
-    <div> Product 2 </div>
+  <main class="container">
+    <header>
+      <div class="logo"> Company Logo </div>
+      <div class="itemList"> 
+        <span> Item 1 </span>
+        <span> Item 2 </span>
+        <span> Item 3 </span>
+        <span> Item 4 </span>
+      </div>
+    </header>
+    <section class="sec1">
+    </section>
+    <section class="sec2">
+      <div>
+        Product 1
+      </div>
+      <div>
+          Product 2
+      </div>
+    </section>
+    <footer> <span> Copyright Notice </span> </footer>
   </main>
-  <footer>
-    <p>Copyright Notice</p>
-  </footer>
 </body>
 </html>
