--- a/layout2.html
+++ b/layout2.html
@@ -8,32 +8,32 @@
   <link rel="stylesheet" type="text/css" href="styles/layout2.css">
 </head>
 <body>
-  <header>
-    <div class="logo"> Company Logo </div>
-    <div class="itemListContainer"> 
-      <p> Item 1 </p>
-      <p> Item 2 </p>
-      <p> Item 3 </p>
-      <p> Item 4 </p>
-    </div>
-  </header>
-  <section>
-    <h1> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris ultrices eros in cursus. </h1>
-    <h3> Elit duis tristique sollicitudin nibh sit amet commodo nulla. Vulputate enim nulla aliquet porttitor lacus luctus. </h3>
-  </section>
-  <main>
-    <div>  </div>
-    <div>  </div>
-    <div>  </div>
-    <div>  </div>
-    <div>  </div>
-    <div>  </div>
-    <div>  </div>
-    <div>  </div>
-    <div>  </div>
+  <main class="container">
+    <header>
+      <div class="logo"> Company Logo </div>
+      <div class="itemList"> 
+        <span> Item 1 </span>
+        <span> Item 2 </span>
+        <span> Item 3 </span>
+        <span> Item 4 </span>
+      </div>
+    </header>
+    <section class="sec1">
+      <span style="font-size: 30px;font-weight: bold"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
+      <span style="font-size: 20px;"> Nulla posuere sollicitudin aliquam ultrices sagittis orci. Sed felis eget velit aliquet sagittis id consectetur purus </span>
+    </section>
+    <section class="sec2">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
+    <footer> <span> Copyright Notice </span> </footer>
   </main>
-  <footer>
-    <p>Copyright Notice</p>
-  </footer>
 </body>
 </html>
